numpy/core/include/numpy/npy_iterators.h

typedef struct NpyArrayIterObject NpyArrayIterObject;
/*
 * type of the function which translates a set of coordinates to a
 * pointer to the data
 */
typedef char* (*npy_iter_get_dataptr_t)(NpyArrayIterObject* iter, npy_intp*);
struct NpyArrayIterObject {
        NpyObject_HEAD
        int               magic_number;       /* Initialized to NPY_VALID_MAGIC initialization and NPY_INVALID_MAGIC on dealloc */
        int               nd_m1;            /* number of dimensions - 1 */
        npy_intp          index, size;
        npy_intp          coordinates[NPY_MAXDIMS];/* N-dimensional loop */
        npy_intp          dims_m1[NPY_MAXDIMS];    /* ao->dimensions - 1 */
        npy_intp          strides[NPY_MAXDIMS];    /* ao->strides or fake */
        npy_intp          backstrides[NPY_MAXDIMS];/* how far to jump back */
        npy_intp          factors[NPY_MAXDIMS];     /* shape factors */
        struct PyArrayObject          *ao;
        char              *dataptr;        /* pointer to current item*/
        npy_bool          contiguous;

        npy_intp          bounds[NPY_MAXDIMS][2];
        npy_intp          limits[NPY_MAXDIMS][2];
        npy_intp          limits_sizes[NPY_MAXDIMS];
        npy_iter_get_dataptr_t translate;
};
/* Iterator API */


NpyArrayIterObject *
NpyArray_IterNew(struct PyArrayObject *ao);
#define NpyArray_ITER_NEXT(it) {                                            \
        (it)->index++;                                               \
        if ((it)->nd_m1 == 0) {                                      \
                _NpyArray_ITER_NEXT1((it));                           \
        }                                                                  \
        else if ((it)->contiguous)                                   \
                (it)->dataptr += (it)->ao->descr->elsize;      \
        else if ((it)->nd_m1 == 1) {                                 \
                _NpyArray_ITER_NEXT2((it));                           \
        }                                                                  \
        else {                                                             \
                int __npy_i;                                               \
                for (__npy_i=(it)->nd_m1; __npy_i >= 0; __npy_i--) { \
                        if ((it)->coordinates[__npy_i] <             \
                            (it)->dims_m1[__npy_i]) {                \
                                (it)->coordinates[__npy_i]++;        \
                                (it)->dataptr +=                     \
                                        (it)->strides[__npy_i];      \
                                break;                                     \
                        }                                                  \
                        else {                                             \
                                (it)->coordinates[__npy_i] = 0;      \
                                (it)->dataptr -=                     \
                                        (it)->backstrides[__npy_i];  \
                        }                                                  \
                }                                                          \
        }                                                                  \
}
/*
 * Any object passed to NpyArray_Broadcast must be binary compatible
 * with this structure.
 */
typedef struct {
        NpyObject_HEAD
        /* DANGER - this must be in sync with MyUFuncLoopObject in ufuncobject.h */
        int                  magic_number;            /* Initialized to NPY_VALID_MAGIC initialization and NPY_INVALID_MAGIC on dealloc */
        int                  numiter;                 /* number of iters */
        npy_intp             size;                    /* broadcasted size */
        npy_intp             index;                   /* current index */
        int                  nd;                      /* number of dims */
        npy_intp             dimensions[NPY_MAXDIMS]; /* dimensions */
        NpyArrayIterObject    *iters[NPY_MAXARGS];     /* iterators */
} NpyArrayMultiIterObject;
#define NpyArray_MultiIter_NEXT(multi) {                                \
        int __npy_mi;                                                   \
        (multi)->index++;                                               \
        for (__npy_mi=0; __npy_mi < (multi)->numiter;   __npy_mi++) {   \
                NpyArray_ITER_NEXT((multi)->iters[__npy_mi]);           \
        }                                                               \
}
#define NpyArray_MultiIter_DATA(multi, i)                \
        ((void *)((multi)->iters[i]->dataptr))
#define NpyArray_MultiIter_NEXTi(multi, i)               \
        NpyArray_ITER_NEXT((multi)->iters[i])