numpy/core/include/numpy/ndarraytypes.h

enum NPY_TYPES {    NPY_BOOL=0,
                    NPY_BYTE, NPY_UBYTE,
                    NPY_SHORT, NPY_USHORT,
                    NPY_INT, NPY_UINT,
                    NPY_LONG, NPY_ULONG,
                    NPY_LONGLONG, NPY_ULONGLONG,
                    NPY_FLOAT, NPY_DOUBLE, NPY_LONGDOUBLE,
                    NPY_CFLOAT, NPY_CDOUBLE, NPY_CLONGDOUBLE,
                    NPY_DATETIME, NPY_TIMEDELTA,
                    NPY_OBJECT=19,
                    NPY_STRING, NPY_UNICODE,
                    NPY_VOID,
                    NPY_NTYPES,
                    NPY_NOTYPE,
                    NPY_CHAR,      /* special flag */
                    NPY_USERDEF=256  /* leave room for characters */
};
typedef enum {
        NPY_CLIP=0,
        NPY_WRAP=1,
        NPY_RAISE=2
} NPY_CLIPMODE;
/*
 * This is to typedef npy_intp to the appropriate pointer size for
 * this platform.  Py_intptr_t, Py_uintptr_t are defined in pyport.h.
 */
typedef Py_intptr_t npy_intp;
/* forward declaration */
struct _PyArray_Descr;
typedef int (PyArray_SetItemFunc)(PyObject *, void *, void *);
typedef void (PyArray_CopySwapNFunc)(void *, npy_intp, void *, npy_intp,
                                     npy_intp, int, void *);
typedef void (PyArray_CopySwapFunc)(void *, void *, int, void *);
/*
 * These assume aligned and notswapped data -- a buffer will be used
 * before or contiguous data will be obtained
 */

typedef int (PyArray_CompareFunc)(const void *, const void *, void *);
typedef int (PyArray_ArgFunc)(void*, npy_intp, npy_intp*, void *);
typedef void (PyArray_DotFunc)(void *, npy_intp, void *, npy_intp, void *,
                               npy_intp, void *);
typedef void (PyArray_VectorUnaryFunc)(void *, void *, npy_intp, void *,
                                       void *);
/*
 * XXX the ignore argument should be removed next time the API version
 * is bumped. It used to be the separator.
 */
typedef int (PyArray_ScanFunc)(FILE *fp, void *dptr,
                               char *ignore, struct _PyArray_Descr *);
typedef int (PyArray_FromStrFunc)(char *s, void *dptr, char **endptr,
                                  struct _PyArray_Descr *);
typedef int (PyArray_FillFunc)(void *, npy_intp, void *);
typedef int (PyArray_SortFunc)(void *, npy_intp, void *);
typedef int (PyArray_ArgSortFunc)(void *, npy_intp *, npy_intp, void *);
typedef int (PyArray_FillWithScalarFunc)(void *, npy_intp, void *, void *);
typedef int (PyArray_ScalarKindFunc)(void *);
typedef void (PyArray_FastClipFunc)(void *in, npy_intp n_in, void *min,
                                    void *max, void *out);
typedef void (PyArray_FastPutmaskFunc)(void *in, void *mask, npy_intp n_in,
                                       void *values, npy_intp nv);
typedef int  (PyArray_FastTakeFunc)(void *dest, void *src, npy_intp *indarray,
                                       npy_intp nindarray, npy_intp n_outer,
                                       npy_intp m_middle, npy_intp nelem,
                                       NPY_CLIPMODE clipmode);
     /* TODO: From numpy_api.h, needed until PyArray_Descr is split into
                              CPython and core parts */
typedef struct _PyArray_Descr {
        PyObject_HEAD
        PyTypeObject *typeobj;  /*
                                 * the type object representing an
                                 * instance of this type -- should not
                                 * be two type_numbers with the same type
                                 * object.
                                 */
        int magic_number;       /* Initialized to NPY_VALID_MAGIC initialization and 
                                   NPY_INVALID_MAGIC on dealloc */
        char kind;              /* kind for this type */
        char type;              /* unique-character representing this type */
        char byteorder;         /*
                                 * '>' (big), '<' (little), '|'
                                 * (not-applicable), or '=' (native).
                                 */
        char unused;
        int flags;              /* flag describing data type */
        int type_num;           /* number representing this type */
        int elsize;             /* element size for this type */
        int alignment;          /* alignment needed for this type */
        struct _arr_descr                                       \
        *subarray;              /*
                                 * Non-NULL if this type is
                                 * is an array (C-contiguous)
                                 * of some other type
                                 */
        struct NpyDict_struct 
            *fields;            /* The fields dictionary for this type
                                 * For statically defined descr this
                                 * is always NULL.
                                 */

        char **names;           /* Array of char *, NULL indicates end of array. 
                                 * char* lifetime is exactly lifetime of array itself. */

        PyArray_ArrFuncs *f;     /*
                                  * a table of functions specific for each
                                  * basic data descriptor
                                  */

        PyObject *metadata;     /* Metadata about this dtype */
} PyArray_Descr;
/*
 * The main array object structure. It is recommended to use the macros
 * defined below (PyArray_DATA and friends) access fields here, instead
 * of the members themselves.
 */

typedef struct PyArrayObject {
        PyObject_HEAD
        int magic_number;       /* Initialized to NPY_VALID_MAGIC initialization and NPY_INVALID_MAGIC on dealloc */
        char *data;             /* pointer to raw data buffer */
        int nd;                 /* number of dimensions, also called ndim */
        npy_intp *dimensions;   /* size in each dimension */
        npy_intp *strides;      /*
                                 * bytes to jump to get to the
                                 * next element in each dimension
                                 */
        struct PyArrayObject *base_arr; /* Base when it's specifically an array object */
        void *base_obj;         /* Base when it's an opaque interface object */
    
        /*PyObject *base; */         /*
                                 * This object should be decref'd upon
                                 * deletion of array
                                 *
                                 * For views it points to the original
                                 * array
                                 *
                                 * For creation from buffer object it
                                 * points to an object that shold be
                                 * decref'd on deletion
                                 *
                                 * For UPDATEIFCOPY flag this is an
                                 * array to-be-updated upon deletion
                                 * of this one
                                 */
        PyArray_Descr *descr;   /* Pointer to type structure */
        int flags;              /* Flags describing array -- see below */
        PyObject *weakreflist;  /* For weakreferences */
} PyArrayObject;
typedef int (PyArray_FinalizeFunc)(PyArrayObject *, PyObject *);
/*****************************
 * Basic iterator object
 *****************************/

/* FWD declaration */
typedef struct PyArrayIterObject_tag PyArrayIterObject;
/*
 * Any object passed to PyArray_Broadcast must be binary compatible
 * with this structure.
 */
typedef struct {
        PyObject_HEAD
        /* DANGER - this must be in sync with MyUFuncLoopObject in ufuncobject.h */
        int                  magic_number;            /* Initialized to NPY_VALID_MAGIC initialization and NPY_INVALID_MAGIC on dealloc */
        int                  numiter;                 /* number of iters */
        npy_intp             size;                    /* broadcasted size */
        npy_intp             index;                   /* current index */
        int                  nd;                      /* number of dims */
        npy_intp             dimensions[NPY_MAXDIMS]; /* dimensions */
        PyArrayIterObject    *iters[NPY_MAXARGS];     /* iterators */
} PyArrayMultiIterObject;