libndarray/src/npy_common.h

typedef complex npy_cdouble;
typedef struct { double real, imag; } npy_cdouble;
typedef complex float npy_cfloat;
typedef struct { float real, imag; } npy_cfloat;
typedef struct { double real, imag; } npy_cdouble;
typedef struct { float real, imag; } npy_cfloat;